0-workloads.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: app1
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - name: http
      protocol: TCP
      port: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: app2
spec:
  type: NodePort
  selector:
    app: app2
  ports:
    - name: http
      protocol: TCP
      port: 80
