5-ingress-definition.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-ingress-definition
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app1.alqoqqonline.uk
    - app2.alqoqqonline.uk
    secretName: my-ingress-cert
  rules:
  - host: app1.alqoqqonline.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
  - host: app2.alqoqqonline.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
